--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -1,17 +1,13 @@
 server {
     listen 80;
-    server_name localhost;
 
-    location /static/ { 
-       alias /home/{{ ansible_user }}/app/catalog/static/;
-       expires 30d;
+    location /static/ {
+        alias {{ static_files_path }};
     }
 
     location / {
-        proxy_pass http://localhost:8000;
+        proxy_pass {{ proxy_pass_url }};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
